# aumos-security-runtime

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_security_runtime/: __init__.py  main.py  settings.py
src/aumos_security_runtime/adapters/: __init__.py  anomaly_detector.py  container_scanner.py  jailbreak_patterns.py  kafka.py  pii_scanner.py  rate_limiter.py  repositories.py  secret_scanner.py  siem_formatters.py  vulnerability_scanner.py  webhook_dispatcher.py
src/aumos_security_runtime/adapters/guardrails/: __init__.py  input_guard.py  output_guard.py
src/aumos_security_runtime/adapters/prompt_injection/: __init__.py  ml_scanner.py  pattern_scanner.py
src/aumos_security_runtime/api/: __init__.py  router.py  schemas.py
src/aumos_security_runtime/core/: __init__.py  gap_models.py  interfaces.py  models.py  services.py
src/aumos_security_runtime/prompt_firewall/: __init__.py  config.py  conversation_tracker.py  firewall.py  output_scanner.py  semantic_classifier.py  signature_scanner.py
src/aumos_security_runtime/supply_chain/: __init__.py  backdoor_tester.py
tests/: __init__.py  conftest.py  test_api.py  test_backdoor_tester.py  test_health.py  test_latency.py  test_pattern_scanner.py  test_prompt_firewall.py  test_repositories.py  test_services.py
